RESOLVED FIXED186590
[GStreamer] fast/canvas/webgl crashes
https://bugs.webkit.org/show_bug.cgi?id=186590
Summary [GStreamer] fast/canvas/webgl crashes
Philippe Normand
Reported 2018-06-13 07:54:04 PDT
fast/canvas/webgl/texImage2D-video-flipY-true.html fast/canvas/canvas-createPattern-video-loading.html fast/canvas/webgl/texImage2D-video-flipY-false.html I think this is a regression of r232747 ... Thread 1 (Thread 0x7f2ae68bd3c0 (LWP 37892)): #0 _g_log_abort () at /home/slave/webkitgtk/gtk-linux-64-release-tests/build/WebKitBuild/DependenciesGTK/Source/glib-2.54.2/glib/gmessages.c:554 #1 0x00007f2aee4b4415 in g_logv () at /home/slave/webkitgtk/gtk-linux-64-release-tests/build/WebKitBuild/DependenciesGTK/Source/glib-2.54.2/glib/gmessages.c:1362 #2 0x00007f2aee4b4562 in g_log () at /home/slave/webkitgtk/gtk-linux-64-release-tests/build/WebKitBuild/DependenciesGTK/Source/glib-2.54.2/glib/gmessages.c:1403 #3 0x00007f2aef35290a in gst_video_frame_map_id () at /home/slave/webkitgtk/gtk-linux-64-release-tests/build/WebKitBuild/DependenciesGTK/Source/gst-plugins-base-1.14.1/gst-libs/gst/video/video-frame.c:78 #4 0x00007f2af66cba52 in _ZN7WebCore31MediaPlayerPrivateGStreamerBase33copyVideoTextureToPlatformTextureEPNS_17GraphicsContext3DEjjijjjbb.part.126 () from /home/slave/webkitgtk/gtk-linux-64-release/build/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #5 0x00007f2af5dc099c in _ZN7WebCore16HTMLVideoElement33copyVideoTextureToPlatformTextureEPNS_17GraphicsContext3DEjjijjjbb () from /home/slave/webkitgtk/gtk-linux-64-release/build/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #6 0x00007f2af668a4c7 in _ZN3WTF15__visitor_tableIRNS_7VisitorIZN7WebCore25WebGLRenderingContextBase10texImage2DEjijjjSt8optionalINS_7VariantIJNS_6RefPtrINS2_9ImageDataENS_13DumbPtrTraitsIS7_EEEENS6_INS2_16HTMLImageElementENS8_ISB_EEEENS6_INS2_17HTMLCanvasElementENS8_ISE_EEEENS6_INS2_16HTMLVideoElementENS8_ISH_EEEEEEEEEUlRKSA_E_JZNS3_10texImage2DEjijjjSL_EUlRKSD_E0_ZNS3_10texImage2DEjijjjSL_EUlRKSG_E1_ZNS3_10texImage2DEjijjjSL_EUlRKSJ_E2_EEEJSA_SD_SG_SJ_EE17__trampoline_funcISJ_EENS2_11ExceptionOrIvEESZ_RSK_ () from /home/slave/webkitgtk/gtk-linux-64-release/build/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #7 0x00007f2af6681366 in _ZN7WebCore25WebGLRenderingContextBase10texImage2DEjijjjSt8optionalIN3WTF7VariantIJNS2_6RefPtrINS_9ImageDataENS2_13DumbPtrTraitsIS5_EEEENS4_INS_16HTMLImageElementENS6_IS9_EEEENS4_INS_17HTMLCanvasElementENS6_ISC_EEEENS4_INS_16HTMLVideoElementENS6_ISF_EEEEEEEE () from /home/slave/webkitgtk/gtk-linux-64-release/build/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #8 0x00007f2af572ddbd in _ZN7WebCore50jsWebGLRenderingContextPrototypeFunctionTexImage2DEPN3JSC9ExecStateE () from /home/slave/webkitgtk/gtk-linux-64-release/build/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #9 0x00007f2a9e8a3177 in ?? () #10 0x00007fffcc257af0 in ?? () #11 0x00007f2af2a2535e in llint_entry () from /home/slave/webkitgtk/gtk-linux-64-release/build/WebKitBuild/Release/lib/libjavascriptcoregtk-4.0.so.18 Backtrace stopped: frame did not save the PC STDERR: STDERR: warning: core file may not match specified executable file. STDERR: error: XDG_RUNTIME_DIR not set in the environment. STDERR: failed to create drawable STDERR: failed to create drawable STDERR: gst_video_frame_map_id: assertion 'GST_IS_BUFFER (buffer)' failed
Attachments
Patch (8.10 KB, patch)
2018-06-13 07:59 PDT, Philippe Normand
no flags
Patch (7.94 KB, patch)
2018-06-13 08:10 PDT, Philippe Normand
clopez: review+
Philippe Normand
Comment 1 2018-06-13 07:59:54 PDT
Philippe Normand
Comment 2 2018-06-13 08:10:09 PDT
Carlos Alberto Lopez Perez
Comment 3 2018-06-13 10:48:38 PDT
*** Bug 186599 has been marked as a duplicate of this bug. ***
Philippe Normand
Comment 4 2018-06-13 10:58:27 PDT
Radar WebKit Bug Importer
Comment 5 2018-06-13 12:29:23 PDT
Note You need to log in before you can comment on or make changes to this bug.