Source/WebCore/platform/graphics/gstreamer/ImageGStreamer.h
@@ -63,9 +63,9 @@ class ImageGStreamer : public RefCounted<ImageGStreamer> {
         ImageGStreamer(GstSample*);
         RefPtr<BitmapImage> m_image;
         FloatRect m_cropRect;
-
 #if USE(CAIRO)
         GstVideoFrame m_videoFrame;
+        bool m_frameMapped { false };
 #endif
     };
 }
